--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: msvc-items
+    name: demo
 
   datasource:
     url: jdbc:postgresql://localhost:5432/taller_spring
@@ -16,8 +16,5 @@ spring:
 server:
   port: 8080
 
-inventory:
-  service:
-    url: http://localhost:8084
 
 
