--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
           distribution: 'temurin'
           cache: 'maven'
       - name: Grant execute permission for Gradle
-        run: chmod +x gradlew
+        run: chmod +x mvnw
       - name: Build and run test
         env:
           SPRING_DATASOURCE_URL: jdbc:postgresql://localhost:5432/taller_spring
