--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-          cache: 'maven'
+          cache: 'mvn'
       - name: Grant execute permission for Gradle
         run: chmod +x mvnw
       - name: Build and run test
